@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.7.1 on Thu Apr 13 17:09:15 2017 -->
+<!-- generated by wxGlade 0.7.1 on Sun May  7 13:37:02 2017 -->
 
 <application class="" encoding="UTF-8" for_version="3.0" header_extension=".h" indent_amount="4" indent_symbol="space" is_template="0" language="python" name="" option="0" overwrite="0" path="converter.py" source_extension=".cpp" top_window="main_frame" use_gettext="1" use_new_namespace="1">
     <object class="MainFrame" name="main_frame" base="EditFrame">
-        <extracode>from images import Images</extracode>
+        <extracode>from images import Images\nfrom Preferences import Preferences</extracode>
         <style>wxDEFAULT_FRAME_STYLE</style>
         <title>SJCAM RAW Converter</title>
         <menubar>1</menubar>
@@ -107,6 +107,9 @@
                         <object class="wxCheckBox" name="tiff_checkbox" base="EditCheckBox">
                             <label>TIFF</label>
                             <tooltip>Convert to TIFF</tooltip>
+                            <events>
+                                <handler event="EVT_CHECKBOX">OnTIFFClicked</handler>
+                            </events>
                         </object>
                     </object>
                     <object class="sizeritem">
@@ -116,6 +119,9 @@
                             <checked>1</checked>
                             <label>DNG</label>
                             <tooltip>Convert to DNG</tooltip>
+                            <events>
+                                <handler event="EVT_CHECKBOX">OnDNGClicked</handler>
+                            </events>
                         </object>
                     </object>
                     <object class="sizeritem">
@@ -124,6 +130,9 @@
                         <object class="wxCheckBox" name="thumb_checkbox" base="EditCheckBox">
                             <label>Thumbnail</label>
                             <tooltip>Create thumbnail (needed by some editors e.g. darktable)</tooltip>
+                            <events>
+                                <handler event="EVT_CHECKBOX">OnThumbnailClicked</handler>
+                            </events>
                         </object>
                     </object>
                     <object class="sizeritem">
@@ -132,6 +141,9 @@
                         <object class="wxCheckBox" name="rotate_checkbox" base="EditCheckBox">
                             <label>Rotation</label>
                             <tooltip>Check if images were taken with rotation enabled in camera</tooltip>
+                            <events>
+                                <handler event="EVT_CHECKBOX">OnRotationClicked</handler>
+                            </events>
                         </object>
                     </object>
                 </object>
